// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
<div
  className="EntityList"
  onScroll={[Function]}
>
  <div
    className="header"
  >
    <div
      className="titleBar"
    >
      <h1>
        EntityList Name
      </h1>
      <SearchField
        onChange={[Function]}
        value=""
      />
      <div
        className="action"
      >
        <button>
          Click Me
        </button>
      </div>
    </div>
  </div>
  <div
    className="content"
  >
    <ul
      className=""
    >
      <ListItem
        data={
          Object {
            "actions": Array [
              Object {
                "action": [MockFunction],
                "icon": "edit",
                "text": "Edit",
              },
            ],
            "icon": "iconType",
            "meta": Array [
              "Some info",
              "Some additional info",
              "Some other info",
            ],
            "name": "aCollectionName",
            "type": "Collection",
          }
        }
        hasWarning={false}
        key="0"
        singleAction={true}
      />
      <ListItem
        data={
          Object {
            "icon": "iconType",
            "meta": Array [
              "Some info",
              "Some additional info",
              "Some other info",
            ],
            "name": "aDashboard",
            "type": "Dashboard",
          }
        }
        hasWarning={false}
        key="1"
        singleAction={true}
      />
      <ListItem
        data={
          Object {
            "icon": "iconType",
            "link": "link/to/somewhere",
            "meta": Array [
              "Some info",
              "Some additional info",
              "Some other info",
              "special info",
            ],
            "name": "aReport",
            "type": "Report",
          }
        }
        hasWarning={false}
        key="2"
        singleAction={true}
      />
    </ul>
    <div>
      Some additional Content
    </div>
  </div>
</div>
`;

exports[`should not show a header entry for column entries that are hidden 1`] = `
<div
  className="columnHeaders"
>
  <div
    className="name"
    key="0"
    title="Name"
  >
    <span
      onClick={[Function]}
    >
      Name
    </span>
  </div>
  <div
    className="meta"
    key="1"
    title="Another Column"
  >
    <span
      onClick={[Function]}
    >
      Another Column
    </span>
  </div>
</div>
`;

exports[`should show a column header if specified 1`] = `
<div
  className="columnHeaders"
>
  <div
    className="name"
    key="0"
    title="Name"
  >
    <span
      onClick={[Function]}
    >
      Name
    </span>
  </div>
  <div
    className="meta"
    key="1"
    title="Meta 1"
  >
    <span
      onClick={[Function]}
    >
      Meta 1
    </span>
  </div>
  <div
    className="meta"
    key="2"
    title="Meta 2"
  >
    <span
      onClick={[Function]}
    >
      Meta 2
    </span>
  </div>
  <div
    className="meta"
    key="3"
    title="Meta 3"
  >
    <span
      onClick={[Function]}
    >
      Meta 3
    </span>
  </div>
</div>
`;
